# spur

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  install.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  e2e.yml  nightly.yml  pr-lint.yml  release.yml
crates/spur-cli/: Cargo.toml
crates/spur-cli/src/: format_engine.rs  main.rs  node.rs  nodelist.rs  sacct.rs  sacctmgr.rs  salloc.rs  sbatch.rs  sdiag.rs  sinfo.rs  squeue.rs  sreport.rs  srun.rs  sshare.rs
crates/spur-cli/tests/: broken_pipe.rs
crates/spur-client/src/: lib.rs
crates/spur-core/src/: array.rs  burst_buffer.rs  config.rs  dependency.rs  job.rs  lib.rs  wal.rs
crates/spur-ffi/src/: lib.rs
crates/spur-k8s/src/: agent.rs  job_controller.rs
crates/spur-sched/src/: backfill.rs  lib.rs  node_match.rs
crates/spur-spank/src/: lib.rs
crates/spur-tests/src/: lib.rs  t06_cancel.rs  t28_arrays.rs  t50_core.rs  t52_config.rs  t55_format.rs  t56_deps.rs  t58_spank.rs
crates/spur-update/: Cargo.toml
crates/spur-update/src/: download.rs  lib.rs
crates/spurctld/: Cargo.toml
crates/spurd/: build.rs
deploy/bare-metal/: cluster_test.sh
docs/deployment/: kubernetes.rst  native-host.rst
docs/developer/: building.rst  contributing.rst
examples/: spur.conf
examples/k8s/: configmap.yaml  namespace.yaml
proto/: slurm.proto
scripts/: scrub-ci-logs.sh
tests/: README.md  conftest.py  pytest.ini
tests/e2e/: README.md  cluster.py  conftest.py  pytest.ini  requirements.txt  test_container.py  test_gpu.py  test_multi_node.py  test_single_node.py
(+40 files in other folders)
